--- a/index.html
+++ b/index.html
@@ -135,8 +135,6 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h3>Protecting and Enhancing Your Property with Ease</h3>
 <p>At Home Repairs 4U, we specialise in comprehensive external maintenance services for homes and properties. Our team installs durable fencing, clears and repairs gutters, provides professional pressure washing for driveways, roofs, patios, and walls, and delivers high-quality exterior decorating. With our user-friendly online calculators, you can quickly get transparent quotes for any service, helping you plan your projects efficiently and with confidence.</p>
 
-<h1>Instant Online Quote Calculators</h1>
-<p>Use our simple, easy-to-use calculators to get instant, transparent quotes for all our external maintenance services. Whether you need fencing, guttering, pressure washing, or exterior decorating, you can plan your project quickly and confidently from start to finish.</p>
 <script>
 function toggleSection(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
 function toggleCalculator(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
@@ -145,7 +143,7 @@ function closeImage(el){ el.style.display="none"; }
 </script>
 
 <!-- ================= FENCING ================= -->
-<h2>All Fence Quote Options</h2>
+<h2>Fence Build Quotes</h2>
 <p class="intro">Click below to view fencing options.</p>
 <p class="intro">
 Use this calculator to get an instant fencing estimate. Enter your total fence length,
