--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 <h1>External Maintenance Experts</h1>
-<h2>Fencing, Guttering, Pressure Washing & Decorating</h2>
+<h2>Fencing, Guttering, Pressure Washing & External-Decorating</h2>
 <h3>Protecting and Enhancing Your Property with Ease</h3>
 <p>At Home Repairs 4U, we specialise in comprehensive external maintenance services for homes and properties. Our team installs durable fencing, clears and repairs gutters, provides professional pressure washing for driveways, roofs, patios, and walls, and delivers high-quality exterior decorating. With our user-friendly online calculators, you can quickly get transparent quotes for any service, helping you plan your projects efficiently and with confidence.</p>
 
