--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@ All materials and labour are included in the final total.
 <div id="fencingSection" style="display:none;">
 <div class="calculators-grid" id="fenceContainer"></div>
 </div>
-
+<a href="https://homerepairs4u.com/quote-calculator/response.html"
+class="quote-button">
+View Your Quote
+</a>
 <!-- ================= FENCING Change ================= -->
 <script>
 const fences=[
