--- a/quote-calculator/response.html
+++ b/quote-calculator/response.html
@@ -4,11 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Your Instant Quote | Home Repairs 4U</title>
+<title>Your Saved Quotes | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/response.html">
-<meta name="description" content="View your instant quote for fencing, guttering, pressure washing, or exterior decorating from Home Repairs 4U. No calls, no emails — just instant accurate pricing.">
-
+<meta name="description" content="View all your saved instant quotes for fencing, guttering, and pressure washing services from Home Repairs 4U.">
 <style>
 /* HEADER STYLING */
 header{
@@ -17,12 +16,10 @@ padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-
 .logo{
 max-height:90px;
 width:auto;
 }
-
 /* FOOTER */
 .site-footer{
 background:#000;
@@ -32,58 +29,78 @@ padding:25px 15px;
 margin-top:40px;
 font-size:14px;
 }
-
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
-h1 { text-align: center; margin-bottom: 20px; }
-.quote-container { max-width: 700px; margin: 0 auto; background: #fff; padding: 25px; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
+h1, h2, h3, h4, h5, h6, p { text-align:center; }
+.result { margin: 20px auto; background:#eef6ff; padding:15px; border-radius:8px; max-width:600px; }
+.clear-btn { display:block; margin:10px auto; padding:10px 20px; background:#ff4757; color:white; border:none; border-radius:6px; cursor:pointer; font-weight:bold; }
+.clear-btn:hover { background:#ff6b6b; }
 </style>
 </head>
 <body>
-
 <header>
 <img src="/images/home-repairs-4u-doncaster.webp"
 alt="Home Repairs 4U logo"
 class="logo"
 width="600" height="200"
 loading="eager">
-
 <div style="text-align:center; margin-top:10px;">
 <a href="https://steely1968.github.io/"
 style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
+<br>
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
-<h1>Your Instant Quote</h1>
+<h1>Your Saved Quotes</h1>
 
-<div class="quote-container" id="quoteResult">
-<p>Loading your quote…</p>
+<button class="clear-btn" onclick="clearAllQuotes()">Clear All Quotes</button>
+
+<h2>Fence Quotes</h2>
+<div id="fenceQuotes">
+<p>No quotes yet.</p>
+</div>
+
+<h2>Gutter Quotes</h2>
+<div id="gutterQuotes">
+<p>No quotes yet.</p>
+</div>
+
+<h2>Pressure Washing Quotes</h2>
+<div id="pressureQuotes">
+<p>No quotes yet.</p>
 </div>
 
 <script>
-// Check for saved quotes in localStorage
-window.addEventListener("DOMContentLoaded", function() {
-const quoteKeys = ["fenceResults","gutterResults","pressureResults","decoratingResults"];
-const container = document.getElementById("quoteResult");
-let found = false;
-
-for(let key of quoteKeys){
-let quote = localStorage.getItem(key);
-if(quote){
-container.innerHTML = quote;
-found = true;
-break; // Show the first available quote
+// Display quotes from localStorage
+function displayQuotes(key, containerId){
+let container = document.getElementById(containerId);
+let quotes = JSON.parse(localStorage.getItem(key)) || [];
+if(quotes.length === 0){
+container.innerHTML = "<p>No quotes yet.</p>";
+} else {
+container.innerHTML = quotes.map(q => `<div class="result">${q}</div>`).join('');
 }
 }
 
-if(!found){
-container.innerHTML = "<p>No quote found. Please go back and generate a quote.</p>";
+// Clear all quotes
+function clearAllQuotes(){
+localStorage.removeItem("fenceResults");
+localStorage.removeItem("gutterResults");
+localStorage.removeItem("pressureResults");
+displayQuotes("fenceResults", "fenceQuotes");
+displayQuotes("gutterResults", "gutterQuotes");
+displayQuotes("pressureResults", "pressureQuotes");
 }
-});
+
+// Load all quotes on page load
+displayQuotes("fenceResults", "fenceQuotes");
+displayQuotes("gutterResults", "gutterQuotes");
+displayQuotes("pressureResults", "pressureQuotes");
 </script>
 
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 </footer>
-
 </body>
 </html>
+
