--- a/quote-calculator/response.html
+++ b/quote-calculator/response.html
@@ -1,55 +1,111 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Your Quote Results | Home Repairs 4U</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Your Saved Quotes | Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/response.html">
+<meta name="description" content="View your saved instant quotes for fencing, guttering, pressure washing, and exterior decorating services. Clear or manage your quotes easily.">
 <style>
-body { font-family:'Montserrat', sans-serif; background:#f4f7f8; padding:30px; margin:0; text-align:center;}
-h1 { text-align:center; }
-.quote-button { cursor:pointer; border:none; border-radius:8px; background:#1e90ff; color:white; padding:10px 20px; margin:10px; display:inline-block; }
-.quote-button:hover { background:#0077cc; }
-.result { background:#eef6ff; padding:15px; border-radius:8px; margin-bottom:20px; }
-.logo { max-height:90px; width:auto; }
-.site-footer{background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;}
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* BUTTONS */
+.call-btn, .clear-btn {
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+cursor:pointer;
+}
+.call-btn:hover, .clear-btn:hover {
+background:#333;
+color:#fff;
+}
+
+/* QUOTES CONTAINER */
+body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; text-align:center; }
+h1 { margin-bottom: 20px; }
+.quotes-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; margin-top: 20px; }
+.card { background:#fff; padding:20px; border-radius:12px; box-shadow:0 8px 20px rgba(0,0,0,0.1); color:#2a2f45; text-align:left; }
+.card h2 { margin-top:0; color:#ff4757; }
+
+@media (max-width: 768px) {
+body { padding: 10px; }
+h1 { font-size: 24px; }
+.quotes-grid { gap: 20px; }
+}
 </style>
 </head>
 <body>
 
 <header>
-<img src="/images/home-repairs-4u-doncaster.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+<br>
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
-<h1>Your Instant Quotes</h1>
+<h1>Your Saved Quotes</h1>
+<p>Only quotes you generated will appear below. You can clear all quotes at any time.</p>
+<button class="clear-btn" onclick="clearQuotes()">Clear All Quotes</button>
 
-<div id="fenceQuote" class="result"></div>
-<div id="gutterQuote" class="result"></div>
-<div id="pressureQuote" class="result"></div>
-<div id="decoratingQuote" class="result"></div>
+<div class="quotes-grid" id="quotesContainer">
+<!-- Saved quotes will appear here -->
+</div>
 
-<button class="quote-button" onclick="clearQuotes()">Clear All Quotes</button>
+<script>
+// Keys used in calculator page
+const quoteKeys = ["fenceResults","gutterResults","pressureResults","decoratingResults"];
+const container = document.getElementById("quotesContainer");
+
+// Show only quotes that exist
+quoteKeys.forEach(key=>{
+const html = localStorage.getItem(key);
+if(html){
+const card = document.createElement("div");
+card.className = "card";
+card.innerHTML = html;
+container.appendChild(card);
+}
+});
+
+// Clear all quotes
+function clearQuotes(){
+quoteKeys.forEach(k=>localStorage.removeItem(k));
+container.innerHTML = "";
+alert("All quotes cleared!");
+}
+</script>
 
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 </footer>
-
-<script>
-// Only read saved quotes
-document.getElementById("fenceQuote").innerHTML = localStorage.getItem("fenceResults") || "No fencing quote yet.";
-document.getElementById("gutterQuote").innerHTML = localStorage.getItem("gutterResults") || "No gutter quote yet.";
-document.getElementById("pressureQuote").innerHTML = localStorage.getItem("pressureResults") || "No pressure washing quote yet.";
-document.getElementById("decoratingQuote").innerHTML = localStorage.getItem("decoratingResults") || "No decorating quote yet.";
-
-// Clear saved quotes
-function clearQuotes() {
-localStorage.removeItem("fenceResults");
-localStorage.removeItem("gutterResults");
-localStorage.removeItem("pressureResults");
-localStorage.removeItem("decoratingResults");
-location.reload();
-}
-</script>
 
 </body>
 </html>
