--- a/quote-calculator/response.html
+++ b/quote-calculator/response.html
@@ -3,11 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<meta name="robots" content="index, follow">
 <title>Your Saved Quotes | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/response.html">
-<meta name="description" content="View your saved instant quotes for fencing, guttering, pressure washing, and exterior decorating services. Clear or manage your quotes easily.">
 <style>
 /* HEADER STYLING */
 header{
@@ -22,36 +20,46 @@ max-height:90px;
 width:auto;
 }
 
-/* BUTTONS */
-.call-btn, .clear-btn {
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
+/* FOOTER */
+.site-footer{
 background:#000;
 color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-cursor:pointer;
-}
-.call-btn:hover, .clear-btn:hover {
-background:#333;
-color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
 }
 
-/* QUOTES CONTAINER */
-body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; text-align:center; }
-h1 { margin-bottom: 20px; }
-.quotes-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; margin-top: 20px; }
-.card { background:#fff; padding:20px; border-radius:12px; box-shadow:0 8px 20px rgba(0,0,0,0.1); color:#2a2f45; text-align:left; }
-.card h2 { margin-top:0; color:#ff4757; }
+body {
+font-family: 'Montserrat', sans-serif;
+background: #f4f7f8;
+padding: 30px;
+margin: 0;
+text-align:center;
+}
 
-@media (max-width: 768px) {
-body { padding: 10px; }
-h1 { font-size: 24px; }
-.quotes-grid { gap: 20px; }
+h1 { margin-bottom: 10px; }
+
+button {
+cursor: pointer;
+padding: 10px 20px;
+margin: 15px 5px;
+border:none;
+border-radius:8px;
+background:#1e90ff;
+color:white;
+font-size:16px;
+transition:0.3s;
+}
+button:hover { background:#0077cc; }
+
+.quote-box {
+background:#eef6ff;
+padding:15px;
+margin:15px auto;
+border-radius:8px;
+text-align:left;
+max-width:700px;
 }
 </style>
 </head>
@@ -63,44 +71,42 @@ alt="Home Repairs 4U logo"
 class="logo"
 width="600" height="200"
 loading="eager">
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
-</div>
-<br>
-<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
 <h1>Your Saved Quotes</h1>
-<p>Only quotes you generated will appear below. You can clear all quotes at any time.</p>
-<button class="clear-btn" onclick="clearQuotes()">Clear All Quotes</button>
+<p>All quotes you generated from the calculators appear below. Click "Clear Quotes" to remove them.</p>
 
-<div class="quotes-grid" id="quotesContainer">
-<!-- Saved quotes will appear here -->
-</div>
+<button onclick="clearQuotes()">Clear Quotes</button>
+<div id="quotesContainer"></div>
 
 <script>
-// Keys used in calculator page
-const quoteKeys = ["fenceResults","gutterResults","pressureResults","decoratingResults"];
+// Display saved quotes
+function displayQuotes(){
 const container = document.getElementById("quotesContainer");
+container.innerHTML = '';
+const quotes = JSON.parse(localStorage.getItem("quotes") || "[]");
 
-// Show only quotes that exist
-quoteKeys.forEach(key=>{
-const html = localStorage.getItem(key);
-if(html){
-const card = document.createElement("div");
-card.className = "card";
-card.innerHTML = html;
-container.appendChild(card);
+if(quotes.length === 0){
+container.innerHTML = "<p>No quotes saved yet.</p>";
+return;
 }
+
+quotes.forEach((q, i) => {
+const div = document.createElement("div");
+div.className = "quote-box";
+div.innerHTML = `<strong>Quote ${i+1}</strong><br>${q}`;
+container.appendChild(div);
 });
-
-// Clear all quotes
-function clearQuotes(){
-quoteKeys.forEach(k=>localStorage.removeItem(k));
-container.innerHTML = "";
-alert("All quotes cleared!");
 }
+
+// Clear quotes
+function clearQuotes(){
+localStorage.removeItem("quotes");
+displayQuotes();
+}
+
+// Run on page load
+displayQuotes();
 </script>
 
 <footer class="site-footer">
