--- a/test2.html
+++ b/test2.html
@@ -1,1 +1,97 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<title>HomeRepairs4U | Professional Home Repairs & Improvements</title>
+<meta name="description" content="Professional home repairs, fencing, roofing and property improvements. Fast quotes, reliable workmanship, and competitive pricing. Get your free estimate today.">
+
+<link rel="canonical" href="https://homerepairs4u.com/">
+<link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+
+<header>
+<div class="container">
+<nav>
+<div class="logo">HomeRepairs4U</div>
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/quote-calculator/fencing.html">Fencing</a></li>
+<li><a href="#">Roofing</a></li>
+<li><a href="#">General Repairs</a></li>
+<li><a href="#">Contact</a></li>
+</ul>
+</nav>
+</div>
+</header>
+
+<section class="hero">
+<div class="container">
+<h1>Trusted Home Repairs & Property Improvements</h1>
+<p>Quality workmanship. Honest pricing. Reliable service.</p>
+<a href="/quote-calculator/fencing.html" class="btn">Get a Free Quote</a>
+</div>
+</section>
+
+<section class="services">
+<div class="container">
+<h2>Our Services</h2>
+
+<div class="service-grid">
+
+<div class="service-card">
+<h3>Fencing Installation</h3>
+<p>Professional fencing installation and repairs. Secure, durable and built to last.</p>
+<a href="/quote-calculator/fencing.html" class="btn">View Pricing</a>
+</div>
+
+<div class="service-card">
+<h3>Roof Repairs</h3>
+<p>Leak detection, tile replacement and full roof repairs carried out safely and efficiently.</p>
+</div>
+
+<div class="service-card">
+<h3>General Property Repairs</h3>
+<p>From minor fixes to full improvement projects, we keep your home in top condition.</p>
+</div>
+
+</div>
+</div>
+</section>
+
+<section class="about">
+<div class="container">
+<h2>Why Choose HomeRepairs4U?</h2>
+<p>
+We pride ourselves on delivering high-quality workmanship and reliable service across every project.
+Our goal is simple — provide honest pricing, clear communication, and results you can trust.
+</p>
+
+<ul style="margin-top:20px;">
+<li>✔ Experienced & Skilled Trades</li>
+<li>✔ Competitive Pricing</li>
+<li>✔ Fast Turnaround</li>
+<li>✔ Free No-Obligation Quotes</li>
+</ul>
+</div>
+</section>
+
+<section class="cta" style="background:#1f3c88;color:#fff;padding:60px 0;text-align:center;">
+<div class="container">
+<h2>Need a Quote?</h2>
+<p style="margin:20px 0;">Use our online calculator or get in touch for a fast response.</p>
+<a href="/quote-calculator/fencing.html" class="btn">Start Your Quote</a>
+</div>
+</section>
+
+<footer>
+<div class="container">
+<p>&copy; 2026 HomeRepairs4U. All rights reserved.</p>
+</div>
+</footer>
+
+</body>
+</html>
