--- a/test2.html
+++ b/test2.html
@@ -7,7 +7,7 @@
 <title>HomeRepairs4U | Professional Home Repairs & Improvements</title>
 <meta name="description" content="Professional home repairs, fencing, roofing and property improvements. Fast quotes, reliable workmanship, and competitive pricing. Get your free estimate today.">
 
-<link rel="canonical" href="https://homerepairs4u.com/">
+<link rel="canonical" href="https://homerepairs4u.com/test2.html">
 <link rel="stylesheet" href="/css/style.css">
 </head>
 
