--- a/test2.html
+++ b/test2.html
@@ -4,94 +4,369 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>HomeRepairs4U | Professional Home Repairs & Improvements</title>
-<meta name="description" content="Professional home repairs, fencing, roofing and property improvements. Fast quotes, reliable workmanship, and competitive pricing. Get your free estimate today.">
+<title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
+<meta name="description" content="Professional fencing, roofing and property repairs. Built properly. Priced fairly. Done right. Get your free quote today.">
 
-<link rel="canonical" href="https://homerepairs4u.com/test2.html">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="canonical" href="https://homerepairs4u.com/">
+
+<style>
+
+/* ========= ROOT ========= */
+:root {
+--primary: #1f3c88;
+--dark: #0f2027;
+--accent: #ffb703;
+--light: #f5f7fa;
+--white: #ffffff;
+--max-width: 1200px;
+}
+
+/* ========= RESET ========= */
+* { margin:0; padding:0; box-sizing:border-box; }
+
+body {
+font-family: 'Segoe UI', sans-serif;
+background: var(--light);
+color:#222;
+line-height:1.6;
+overflow-x:hidden;
+}
+
+/* Scroll Progress Bar */
+#progressBar {
+position:fixed;
+top:0;
+left:0;
+height:4px;
+background:var(--accent);
+width:0%;
+z-index:2000;
+}
+
+/* Container */
+.container {
+width:90%;
+max-width:var(--max-width);
+margin:auto;
+}
+
+/* ========= HEADER ========= */
+header {
+position:sticky;
+top:0;
+background:rgba(15,32,39,0.9);
+backdrop-filter:blur(10px);
+z-index:1000;
+}
+
+nav {
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:20px 0;
+}
+
+nav ul {
+display:flex;
+list-style:none;
+gap:30px;
+}
+
+nav a {
+color:white;
+text-decoration:none;
+font-weight:500;
+transition:0.3s;
+}
+
+nav a:hover { color:var(--accent); }
+
+/* ========= HERO ========= */
+.hero {
+height:100vh;
+display:flex;
+align-items:center;
+justify-content:center;
+text-align:center;
+color:white;
+background: linear-gradient(-45deg, #1f3c88, #0f2027, #203a43, #2c5364);
+background-size:400% 400%;
+animation:gradientMove 12s ease infinite;
+position:relative;
+overflow:hidden;
+}
+
+@keyframes gradientMove {
+0%{background-position:0% 50%;}
+50%{background-position:100% 50%;}
+100%{background-position:0% 50%;}
+}
+
+.hero h1 {
+font-size:3.5rem;
+font-weight:800;
+}
+
+.hero p {
+font-size:1.3rem;
+margin:25px 0;
+}
+
+/* Floating shapes */
+.shape {
+position:absolute;
+border-radius:50%;
+opacity:0.15;
+animation:float 6s ease-in-out infinite;
+}
+
+.shape1 { width:200px; height:200px; background:white; top:10%; left:5%; }
+.shape2 { width:150px; height:150px; background:white; bottom:15%; right:10%; animation-delay:2s;}
+
+@keyframes float {
+0%{ transform:translateY(0px); }
+50%{ transform:translateY(-30px); }
+100%{ transform:translateY(0px); }
+}
+
+/* Buttons */
+.btn {
+background:linear-gradient(45deg,#ffb703,#ff9800);
+padding:15px 45px;
+border-radius:50px;
+font-weight:bold;
+text-decoration:none;
+color:black;
+display:inline-block;
+transition:0.3s;
+}
+
+.btn:hover {
+transform:translateY(-5px);
+box-shadow:0 15px 30px rgba(0,0,0,0.3);
+}
+
+/* ========= SECTIONS ========= */
+.section { padding:100px 0; }
+
+/* Glass cards */
+.grid {
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:35px;
+margin-top:60px;
+}
+
+.card {
+background:rgba(255,255,255,0.6);
+backdrop-filter:blur(15px);
+padding:40px;
+border-radius:20px;
+transition:0.4s;
+box-shadow:0 20px 40px rgba(0,0,0,0.08);
+}
+
+.card:hover {
+transform:translateY(-10px);
+box-shadow:0 30px 60px rgba(0,0,0,0.15);
+}
+
+/* Before After */
+.before-after {
+position:relative;
+overflow:hidden;
+border-radius:20px;
+}
+
+.before-after img {
+width:100%;
+display:block;
+transition:0.5s;
+}
+
+.before-after:hover img {
+transform:scale(1.1);
+}
+
+/* Counters */
+.counter {
+font-size:3rem;
+font-weight:800;
+color:var(--primary);
+}
+
+/* Testimonials */
+.testimonial {
+text-align:center;
+max-width:700px;
+margin:auto;
+font-style:italic;
+}
+
+/* Fade Animation */
+.fade { opacity:0; transform:translateY(40px); transition:0.8s ease; }
+.fade.show { opacity:1; transform:translateY(0); }
+
+/* Footer */
+footer {
+background:var(--dark);
+color:white;
+text-align:center;
+padding:40px 0;
+}
+
+@media(max-width:768px){
+.hero h1 { font-size:2.2rem; }
+}
+
+</style>
 </head>
 
 <body>
 
+<div id="progressBar"></div>
+
 <header>
 <div class="container">
 <nav>
-<div class="logo">HomeRepairs4U</div>
+<div style="color:white;font-weight:800;font-size:1.5rem;">HomeRepairs4U</div>
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="/quote-calculator/fencing.html">Fencing</a></li>
 <li><a href="#">Roofing</a></li>
-<li><a href="#">General Repairs</a></li>
-<li><a href="#">Contact</a></li>
+<li><a href="#">Repairs</a></li>
 </ul>
 </nav>
 </div>
 </header>
 
 <section class="hero">
-<div class="container">
-<h1>Trusted Home Repairs & Property Improvements</h1>
-<p>Quality workmanship. Honest pricing. Reliable service.</p>
-<a href="/quote-calculator/fencing.html" class="btn">Get a Free Quote</a>
+<div class="shape shape1"></div>
+<div class="shape shape2"></div>
+<div>
+<h1>Built Properly. Priced Fairly. Done Right.</h1>
+<p>No shortcuts. No inflated quotes. Just solid work.</p>
+<a href="/quote-calculator/fencing.html" class="btn">Get Your Free Quote</a>
 </div>
 </section>
 
-<section class="services">
-<div class="container">
-<h2>Our Services</h2>
-
-<div class="service-grid">
-
-<div class="service-card">
+<section class="section">
+<div class="container fade">
+<h2 style="text-align:center;font-size:2.5rem;">Our Services</h2>
+<div class="grid">
+<div class="card">
 <h3>Fencing Installation</h3>
-<p>Professional fencing installation and repairs. Secure, durable and built to last.</p>
-<a href="/quote-calculator/fencing.html" class="btn">View Pricing</a>
+<p>Strong, secure fencing built to last.</p>
 </div>
-
-<div class="service-card">
+<div class="card">
 <h3>Roof Repairs</h3>
-<p>Leak detection, tile replacement and full roof repairs carried out safely and efficiently.</p>
+<p>Fast response and durable roofing solutions.</p>
 </div>
-
-<div class="service-card">
-<h3>General Property Repairs</h3>
-<p>From minor fixes to full improvement projects, we keep your home in top condition.</p>
+<div class="card">
+<h3>Property Improvements</h3>
+<p>Upgrades that increase value and protection.</p>
 </div>
-
 </div>
 </div>
 </section>
 
-<section class="about">
-<div class="container">
-<h2>Why Choose HomeRepairs4U?</h2>
-<p>
-We pride ourselves on delivering high-quality workmanship and reliable service across every project.
-Our goal is simple — provide honest pricing, clear communication, and results you can trust.
-</p>
-
-<ul style="margin-top:20px;">
-<li>✔ Experienced & Skilled Trades</li>
-<li>✔ Competitive Pricing</li>
-<li>✔ Fast Turnaround</li>
-<li>✔ Free No-Obligation Quotes</li>
-</ul>
+<section class="section" style="background:#f5f7fa;">
+<div class="container fade" style="text-align:center;">
+<h2>Our Results</h2>
+<div class="grid">
+<div><div class="counter" data-target="500">0</div><p>Projects Completed</p></div>
+<div><div class="counter" data-target="15">0</div><p>Years Experience</p></div>
+<div><div class="counter" data-target="100">0</div><p>% Satisfaction</p></div>
+</div>
 </div>
 </section>
 
-<section class="cta" style="background:#1f3c88;color:#fff;padding:60px 0;text-align:center;">
-<div class="container">
-<h2>Need a Quote?</h2>
-<p style="margin:20px 0;">Use our online calculator or get in touch for a fast response.</p>
+<section class="section">
+<div class="container fade">
+<h2 style="text-align:center;">Before & After</h2>
+<div class="grid">
+<div class="before-after">
+<img src="https://picsum.photos/600/400?random=1" alt="">
+</div>
+<div class="before-after">
+<img src="https://picsum.photos/600/400?random=2" alt="">
+</div>
+</div>
+</div>
+</section>
+
+<section class="section" style="background:#fff;">
+<div class="container fade">
+<h2 style="text-align:center;">What Customers Say</h2>
+<div class="testimonial" id="testimonial">
+"Fantastic service. Turned up on time and did a brilliant job."
+</div>
+</div>
+</section>
+
+<section class="section" style="background:var(--primary);color:white;text-align:center;">
+<div class="container fade">
+<h2>Ready To Start?</h2>
+<br>
 <a href="/quote-calculator/fencing.html" class="btn">Start Your Quote</a>
 </div>
 </section>
 
 <footer>
 <div class="container">
-<p>&copy; 2026 HomeRepairs4U. All rights reserved.</p>
+<p>&copy; 2026 HomeRepairs4U</p>
 </div>
 </footer>
+
+<script>
+
+/* Scroll Progress */
+window.onscroll = function() {
+let winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+let height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+let scrolled = (winScroll / height) * 100;
+document.getElementById("progressBar").style.width = scrolled + "%";
+};
+
+/* Fade in on scroll */
+const faders = document.querySelectorAll('.fade');
+const appear = new IntersectionObserver(entries=>{
+entries.forEach(entry=>{
+if(entry.isIntersecting){ entry.target.classList.add('show'); }
+});
+},{threshold:0.2});
+faders.forEach(fader=>appear.observe(fader));
+
+/* Counter animation */
+const counters = document.querySelectorAll('.counter');
+counters.forEach(counter=>{
+const update=()=>{
+const target=+counter.getAttribute('data-target');
+const count=+counter.innerText;
+const inc=target/200;
+if(count<target){
+counter.innerText=Math.ceil(count+inc);
+setTimeout(update,10);
+}else{
+counter.innerText=target;
+}
+};
+update();
+});
+
+/* Testimonial slider */
+const testimonials=[
+"Fantastic service. Turned up on time and did a brilliant job.",
+"Fair pricing and great workmanship. Highly recommended.",
+"Quick quote and professional finish. Will use again."
+];
+let i=0;
+setInterval(()=>{
+i=(i+1)%testimonials.length;
+document.getElementById("testimonial").innerText=testimonials[i];
+},4000);
+
+</script>
 
 </body>
 </html>
